# cli-music-player

./: .gitignore  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  prd-20260224.md  pyproject.toml  requirements.txt
cmp/: __main__.py
cmp/config/: settings.py
cmp/player/: __init__.py  engine.py  metadata.py  playlist.py
cmp/themes/: manager.py
cmp/ui/: app.py
cmp/ui/layouts/: __init__.py  base.py  compact.py  default.py  minimal.py  playlist.py  split.py  visual.py
cmp/ui/screens/: __init__.py  menus.py  player_screen.py
cmp/ui/widgets/: __init__.py  playlist_widget.py  progress_bar.py  visualizer_widget.py  volume_bar.py
cmp/visualizer/: __init__.py  base.py  circle.py  manager.py  mirror.py  oscilloscope.py  spectrum.py  stereo.py  waveform.py
docs/: API.md  ARCHITECTURE.md  PRD.md  THEME_SYSTEM.md
